fixup!: empty value
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -116,13 +116,14 @@ jobs:
 
       - name: get operating system lowercase
         id: os
-        run: echo "RUNNER_OS=\"$(echo ${{ runner.os }} | tr '[:upper:]' '[:lower:]')\"" >> $GITHUB_OUTPUT
+        shell: bash
+        run: echo "runner_os=$(echo ${{ runner.os }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
 
       - uses: goreleaser/goreleaser-action@v6
         with:
           distribution: goreleaser
           version: "~> v2"
-          args: build --id devpod-${{ steps.os.outputs.RUNNER_OS }} --snapshot
+          args: build --id devpod-${{ steps.os.outputs.runner_os }} --snapshot
 
       - uses: actions/upload-artifact@v6
         with:
@@ -341,9 +342,10 @@ jobs:
           cp dist/devpod_${RUNNER_OS}_${{ matrix.arch }}_* desktop/src-tauri/bin/devpod-cli-${{ matrix.target }}${{ runner.os == 'windows' && '.exe' || '' }}
 
       - name: generate signing key and update config
+        id: generate
         run: |
           yarn tauri signer generate -- --ci -w ../app.key
-          TAURI_PRIVATEKEY=$(cat ../app.key) >> $GITHUB_ENV
+          echo "tauri_privatekey=$(cat ../app.key)" >> $GITHUB_ENV
           TAURI_PUBKEY=$(cat ../app.key.pub)
           jq --arg pubkey "$TAURI_PUBKEY" '.plugins.updater.pubkey = $pubkey' desktop/src-tauri/tauri.conf.json > tmp.json && mv tmp.json desktop/src-tauri/tauri.conf.json
 
@@ -354,4 +356,4 @@ jobs:
           args: "--target ${{ matrix.target }} ${{ runner.os == 'Linux' && '--config src-tauri/tauri-flatpak.conf.json --bundles appimage,deb,updater' || '' }}"
           includeUpdaterJson: ${{ runner.os == 'Linux' && 'true' || 'false' }}
         env:
-          TAURI_SIGNING_PRIVATE_KEY: "${TAURI_PRIVATEKEY}"
+          TAURI_SIGNING_PRIVATE_KEY: "${{ steps.generate.outputs.tauri_privatekey }}"
