--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -11,7 +11,7 @@ builds:
         - sh -c 'go test $(go list ./... | grep -v -e /test -e /e2e) -race -coverprofile=dist/profile.out -covermode=atomic'
     goos: [linux, darwin, windows]
     goarch: [amd64, arm64]
-    binary: devpod-cli
+    binary: devpod
 
   - id: devpod-linux
     hooks:
@@ -19,7 +19,7 @@ builds:
         - sh -c 'go test $(go list ./... | grep -v -e /test -e /e2e) -race -coverprofile=dist/profile.out -covermode=atomic'
     goos: [linux]
     goarch: [amd64, arm64]
-    binary: devpod-cli-{{ .Os }}-{{ .Arch }}
+    binary: devpod-{{ .Os }}-{{ .Arch }}
 
   - id: devpod-darwin
     hooks:
@@ -27,17 +27,17 @@ builds:
         - sh -c 'go test $(go list ./... | grep -v -e /test -e /e2e) -race -coverprofile=dist/profile.out -covermode=atomic'
     goos: [darwin]
     goarch: [amd64, arm64]
-    binary: devpod-cli-{{ .Os }}-{{ .Arch }}
+    binary: devpod-{{ .Os }}-{{ .Arch }}
 
   - id: devpod-windows
     goos: [windows]
     goarch: [amd64, arm64]
-    binary: devpod-cli-{{ .Os }}-{{ .Arch }}
+    binary: devpod-{{ .Os }}-{{ .Arch }}
 
   - id: devpod-dev
     goos: [linux]
     goarch: [amd64]
-    binary: devpod-cli-{{ .Os }}-{{ .Arch }}-dev
+    binary: devpod-{{ .Os }}-{{ .Arch }}-dev
 archives:
   - formats: [tar.gz]
     format_overrides:
