fixup!: path to upload files
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -133,7 +133,7 @@ jobs:
       - uses: actions/upload-artifact@v6
         with:
           name: devpod-${{ steps.os.outputs.runner_os }}
-          path: dist/devpod-${{ steps.os.outputs.runner_os }}-*
+          path: dist/*devpod-${{ steps.os.outputs.runner_os }}-*
 
   integration-tests:
     name: Integration Tests
