fixup!: specify shell for windows
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -369,6 +369,7 @@ jobs:
       - name: generate signing key and update config
         id: generate
         working-directory: ./desktop
+        shell: bash
         run: |
           yarn tauri signer generate -- --ci -w ./app.key
           echo "tauri_privatekey=$(cat ./app.key)" >> "$GITHUB_ENV"
