fixup!: setup shell for setup executable
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -232,16 +232,10 @@ jobs:
 
       # e2e expects executable to have name defined in e2e/framework/framework.go
       - name: setup executable
-        if: runner.os != 'Windows'
+        shell: bash
         run: |
           find ./e2e/bin/ -name "devpod-${{ steps.os.outputs.runner_os }}-amd64" -exec mv {} ./e2e/bin/devpod-${{ steps.os.outputs.runner_os }}-amd64 \;
           chmod +x "./e2e/bin/devpod-${{ steps.os.outputs.runner_os }}-amd64"
-
-      - name: setup executable (Windows)
-        if: runner.os == 'Windows'
-        shell: powershell
-        run: |
-          Get-ChildItem -Path "./e2e/bin/" -Name "devpod-${{ steps.os.outputs.runner_os }}-amd64.exe" -Recurse | ForEach-Object { Move-Item -Path $_.FullName -Destination "./e2e/bin/devpod-${{ steps.os.outputs.runner_os }}-amd64.exe" }
 
       # NOTE: engineerd/setup-kind does not work on Windows runners
       - name: setup kind
